--- a/src/app/views/quiz/quiz.component.css
+++ b/src/app/views/quiz/quiz.component.css
@@ -14,3 +14,7 @@
         line-height: 30px;
     }
 }
+
+#form {
+    z-index: 1;
+}
